# tree-formatter-rs

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Readme.md
src/: format.rs  lib.rs  macros.rs
